fixed spacing issues on first page

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 #header {
     width: 100%;
-    height: 100vh;
+    height: 60em;
     background-image: url(images/Water_Fountain.jpg);
     background-size: cover;
     background-position: center;
@@ -37,7 +37,7 @@ nav {
     position: absolute; /*ie6 */
     background-color: white;
     z-index: 8;
-    height: 10%;
+    height: 5.5em;
     width: 102%;
     right: -1.5%;
     top: -1%;
@@ -76,6 +76,7 @@ nav ul {
     position: absolute;
     left: 85em;
     width: 40em;
+    
 }
 
 nav ul li {
@@ -99,7 +100,7 @@ nav ul li a::after {
     background: #ff004f;
     position: absolute;
     left: 0;
-    bottom: -6px;
+    
     transition: 0.5s;
 }
 
